<resources>
    <string name="app_name">FoodApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="Notification">Notification</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Home String  -->
    <string name="likeEat">What Would like eat </string>
    <string name="overPopular">over popular for items</string>>
    <string name="categories">Categories</string>
    <!-- Strings related to login -->
    <string name="register">Register</string>
    <string name="signUp">SignUp </string>
    <string name="firstName">FirstName</string>
    <string name="secondName">SecondName</string>
    <string name="phoneNumber">PhoneNumber</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">ConfirmPassword</string>
    <string name="login">Login</string>
    <string name="registerNow">Register Now</string>
    <string name="forgetPassword">Forget Password</string>
    <string name="enterFirstName">please enter First Name </string>
    <string name="enterSecondName">please enter Second Name </string>
    <string name="enterPhoneNumber">please enter Phone Number</string>
    <string name="enterEmail">please enter Email Number</string>
    <string name="enterPassword">please enter Password</string>
    <string name="enterConfirmPassword">please enter Confirm Password</string>
    <string name="errorConfirmPassword">Error confirm password</string>
    <string name="errorDescConfirmPassword">Password is not Same Confirm Password please enter again</string>
    <string name="ok">Ok</string>
    <string name="verficationUser">Verfication User</string>
    <string name="login_cancelled">Login Cancelled</string>
    <string name="no_Internet">Internet Is Not Available </string>
    <string name="un_known_Error">Error is un Known </string>
    <string name="un_known_SignIn">Un known Login</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="logoutDesc">your logout click ok to Logout or Cancel to cancel Logout</string>
    <string name="loginError">Login Error</string>
    <string name="errorLoginDesc">please Rewrite Correct Mobile Number or Correct Password</string>
    <string name="changePassword">ChangePassword</string>
    <string name="mealName">Meal Name</string>
    <string name="category">Category</string>
    <string name="area">Area</string>
    <string name="newPassword">New Password</string>
    <string name="oldPassword">oldPassword</string>
    <string name="oldPasswordQuestion">Please Enter your Old Password</string>
    <string name="newPasswordQuestion">Please enter your New Password</string>
    <string name="confirmPasswordQuestion">Please Confirm Password</string>
    <string name="zero">0</string>
    <string name="aed">aed</string>
    <string name="add">ADD</string>

</resources>