<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.foodapp.HomeFragment"
        android:label="fragment_home2"
        tools:layout="@layout/fragment_home2" >
        <action
            android:id="@+id/action_homeFragment_to_favouriteFragment"
            app:destination="@id/favouriteFragment" />
    </fragment>
    <fragment
        android:id="@+id/favouriteFragment"
        android:name="com.example.foodapp.FavouriteFragment"
        android:label="fragment_favourite"
        tools:layout="@layout/fragment_favourite" >
        <action
            android:id="@+id/action_favouriteFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.foodapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.foodapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.foodapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>